--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ label{
     display: block;
 }
 
+h2,
 h3,
 h4{
     text-align: center;
@@ -59,6 +60,7 @@ h4{
 }
 
 button{
+    display: block;
 	padding: 5px;
 	border-radius: 8px;
 	background-color: transparent;
